[workspace]
members = [
    "crates/mynd",
    "crates/mynd-core",
]
default-members = ["crates/mynd"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/valkyoth/mynd"
repository = "https://github.com/valkyoth/mynd"

[workspace.lints.rust]
unsafe_code = "forbid"
unsafe_op_in_unsafe_fn = "forbid"
unused_must_use = "deny"
missing_docs = "deny"

[workspace.lints.clippy]
panic = "forbid"
unwrap_used = "forbid"
expect_used = "forbid"
undocumented_unsafe_blocks = "forbid"
indexing_slicing = "forbid"
arithmetic_side_effects = "forbid"
cast_possible_truncation = "deny"
cast_sign_loss = "deny"

[workspace.dependencies]
mynd-core = { path = "crates/mynd-core", version = "=0.1.0", default-features = false }

[profile.release]
overflow-checks = true
panic = "abort"

[profile.dev]
overflow-checks = true

[profile.test]
overflow-checks = true
