[package]
name = "mynd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Security-first, resource-bounded no_std image codecs and processing."
license.workspace = true
readme = "../../README.md"
documentation = "https://docs.rs/mynd"
homepage.workspace = true
repository.workspace = true
keywords = ["image", "codec", "no-std", "graphics"]
categories = ["multimedia::images", "no-std"]
include = ["Cargo.toml", "src/**/*.rs", "../../README.md"]

[features]
default = []
alloc = ["mynd-core/alloc"]
std = ["alloc", "mynd-core/std"]

[dependencies]
mynd-core.workspace = true

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
